[workspace]
members = ["logo-interp", "logo-runtime", "logo-renderer", "logo-egui", "logo-web"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/supermina999/logo-rust"
authors = ["Stanislav Minakov"]

[workspace.dependencies]
wasm-bindgen = "0.2.74"
