[package]
name = "logo-egui"
version.workspace = true
edition.workspace = true

[dependencies]
logo-renderer = {path = '../logo-renderer'}
egui = "0.22.0"
egui_extras = "0.22.0"
eframe = "0.22.0"
wasm-bindgen = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
