[package]
name = "logo-egui"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true
description = "Simple GUI for Logo programming language, primarily used for testing & debugging purposes"

[dependencies]
logo-renderer = {path = '../logo-renderer'}
egui = "0.22.0"
egui_extras = "0.22.0"
eframe = "0.22.0"
wasm-bindgen = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
