[package]
name = "logo-interp"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true
description = "Implements parsing and interpreting of Logo programming language"

[dependencies]
lazy_static = "1.4.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
