[package]
name = "logo-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true
description = "Implements a simple CPU renderer for logo-runtime crate"

[dependencies]
logo-runtime = { workspace = true }
raqote = { version = "0.8.2", default-features = false }
wasm-bindgen = { workspace = true }
