[package]
name = "logo-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true
description = "Implements the runtime for graphic functionality of Logo programming language"

[dependencies]
logo-interp = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
approx = "0.5.1"
