[package]
name = "logo-web"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true
description = "Web-based IDE for Logo programming language"

[lib]
crate-type = ["cdylib"]

[dependencies]
logo-renderer = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = "0.3.64"
